<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">lavo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="defaultDescription">blah</string>
    <string name="txt_tab1">首页</string>
    <string name="txt_tab2">聊天</string>
    <string name="txt_tab3">震动</string>
    <string name="txt_tab4">Pandora</string>
    <string name="txt_tab5">更多</string>
    <string name="txt_send">发送</string>
    <string name="txt_friend_chat">交谈</string>
    <string name="title_activity_holder">HolderActivity</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_10">10</string>
    <string name="btn_11">11</string>
    <string name="txt_login_logo">登录LAVO</string>
    <string name="txt_signup_logo">注册LAVO账户</string>
    <string name="edt_login_nickname_hint">输入邮箱</string>
    <string name="edt_login_password_hint">输入密码</string>
    <string name="btn_login">登陆</string>
    <string name="txt_signup_birthday_hint">生日</string>
    <string name="edt_signup_nickname_hint">输入邮箱</string>
    <string name="edt_signup_password_hint">输入密码</string>
    <string name="edt_signup_email_hint">邮箱地址</string>
    <string name="radio_gender_male">男</string>
    <string name="radio_gender_female">女</string>
    <string name="btn_signup">注册</string>
    <string name="btn_submit">提交</string>
    <string name="txt_bluetooth_name_no">[没有找到lavo]</string>
    <string name="txt_bluetooth_name_yes">[已连接lavo]</string>
    <string name="txt_bluetooth_search_hint">点此开始搜索配对lavo</string>
    <string name="txt_bluetooth_search_hint_ongoing">正在搜索...</string>
    <string name="txt_time">时间</string>
    <string name="txt_add_friend_hint">与亲密的伴侣分享</string>
    <string name="txt_add_friend_button">添加伙伴</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="txt_profile_nickname">昵称</string>
    <string name="txt_profile_gender">性别</string>
    <string name="txt_profile_photo">头像</string>
    <string name="txt_profile_relation">关系</string>
    <string name="title_activity_relation">我的关系</string>
    <string name="btn_un_relation">解除关系</string>
    <string name="title_activity_new_user">新用户</string>
    <string name="txt_newuser_login">登陆</string>
    <string name="txt_newuser_signup">注册</string>
    <string name="txt_newuser_guest">游客</string>
    <string name="txt_should_know">已阅读并同意使用</string>
    <string name="txt_should_know_check"><b>条款和隐私策略</b></string>
    <string name="should_know_content">loading..</string>
    <string name="title_activity_should_know">条款和隐私策略</string>
    
    <string name="setting_delete_chat_log">删除聊天记录</string>
    <string name="setting_notification">收到消息时提示</string>
    <string name="setting_notification_off">收到消息时不提示</string>
    <string name="setting_close">关闭</string>

</resources>