<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:layout_margin="10dp"
    android:background="@drawable/img_round_corner"
    android:weightSum="3" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4" >

        <Button
            android:id="@+id/btn_0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/pause"
            android:contentDescription="@string/defaultDescription"
            android:padding="5dp"
            android:scaleType="fitCenter" />

        <Button
            android:id="@+id/btn_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/pulse"
            android:contentDescription="@string/defaultDescription"
            android:padding="3dp"
            android:scaleType="fitCenter"
            android:text="@string/btn_1"
            android:textColor="#ffffffaa" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/pulse"
            android:contentDescription="@string/defaultDescription"
            android:padding="3dp"
            android:scaleType="fitCenter"
            android:text="@string/btn_2"
            android:textColor="#ffffffaa" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/pulse"
            android:contentDescription="@string/defaultDescription"
            android:padding="3dp"
            android:scaleType="fitCenter"
            android:text="@string/btn_3"
            android:textColor="#ffffffaa" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4" >

        <Button
            android:id="@+id/btn_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/pulse"
            android:contentDescription="@string/defaultDescription"
            android:padding="3dp"
            android:scaleType="fitCenter"
            android:text="@string/btn_4"
            android:textColor="#ffffffaa" />

        <Button
            android:id="@+id/btn_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/pulse"
            android:contentDescription="@string/defaultDescription"
            android:padding="3dp"
            android:scaleType="fitCenter"
            android:text="@string/btn_5"
            android:textColor="#ffffffaa" />

        <Button
            android:id="@+id/btn_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/pulse"
            android:contentDescription="@string/defaultDescription"
            android:padding="3dp"
            android:scaleType="fitCenter"
            android:text="@string/btn_6"
            android:textColor="#ffffffaa" />

        <Button
            android:id="@+id/btn_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/pulse"
            android:contentDescription="@string/defaultDescription"
            android:padding="3dp"
            android:scaleType="fitCenter"
            android:text="@string/btn_7"
            android:textColor="#ffffffaa" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4" >

        <Button
            android:id="@+id/btn_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/pulse"
            android:contentDescription="@string/defaultDescription"
            android:padding="3dp"
            android:scaleType="fitCenter"
            android:text="@string/btn_8"
            android:textColor="#ffffffaa" />

        <Button
            android:id="@+id/btn_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/pulse"
            android:contentDescription="@string/defaultDescription"
            android:padding="3dp"
            android:scaleType="fitCenter"
            android:text="@string/btn_9"
            android:textColor="#ffffffaa" />

        <Button
            android:id="@+id/btn_10"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/pulse"
            android:contentDescription="@string/defaultDescription"
            android:padding="3dp"
            android:scaleType="fitCenter"
            android:text="@string/btn_10"
            android:textColor="#ffffffaa" />

        <Button
            android:id="@+id/btn_11"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/pulse"
            android:contentDescription="@string/defaultDescription"
            android:padding="3dp"
            android:scaleType="fitCenter"
            android:text="@string/btn_11"
            android:textColor="#ffffffaa" />
    </TableRow>

</TableLayout>