<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".NewUserActivity" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:contentDescription="@string/defaultDescription"
        android:scaleType="fitCenter"
        android:src="@drawable/splash" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_newuser_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@color/greenyellow"
        android:text="@string/txt_newuser_login" />

    <Button
        android:id="@+id/btn_newuser_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@color/goldenrod"
        android:text="@string/txt_newuser_signup" />

    <Button
        android:id="@+id/btn_newuser_guest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@color/turquoise"
        android:text="@string/txt_newuser_guest" />

</LinearLayout>