<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_vibrateview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bground_splash" >

    <TextView
        android:id="@+id/txt_login_logo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/layout_login"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/txt_login_logo"
        android:textColor="@color/lightslategray"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:background="@drawable/img_round_corner"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edt_login_nickname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:hint="@string/edt_login_nickname_hint"
            android:inputType="text"
            android:padding="5dp"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:contentDescription="@string/defaultDescription" />

        <EditText
            android:id="@+id/edt_login_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:hint="@string/edt_login_password_hint"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/layout_login"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_login"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:background="@drawable/btn_jeans"
            android:text="@string/btn_login"
            android:textSize="25sp" />
    </LinearLayout>

</RelativeLayout>