<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_vibrateview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavo_background" >

    <TextView
        android:id="@+id/txt_signup_logo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/layout_signup"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/txt_login_logo"
        android:textColor="@color/lightslategray"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/layout_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:background="@drawable/img_round_corner"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edt_signup_nickname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:hint="@string/edt_signup_nickname_hint"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:contentDescription="@string/defaultDescription" />

        <EditText
            android:id="@+id/edt_signup_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:hint="@string/edt_signup_password_hint"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:contentDescription="@string/defaultDescription"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edt_signup_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:hint="@string/edt_signup_email_hint"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textSize="20sp"
            android:visibility="gone" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:contentDescription="@string/defaultDescription"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/txt_signup_birthday_hint"
                android:textSize="20sp" />

            <DatePicker
                android:id="@+id/dp_signup"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:background="@null"
                android:endYear="2013"
                android:startYear="1960" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:contentDescription="@string/defaultDescription" />

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_signup_male"
                android:drawableLeft="@drawable/male" />

            <RadioButton
                android:id="@+id/radio_signup_female"
                android:drawableLeft="@drawable/female" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/chk_should_know"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_should_know" />

            <TextView
                  android:id="@+id/txt_should_know_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_should_know_check" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_signup_submit"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_below="@+id/layout_signup"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="@drawable/btn_jeans"
        android:text="@string/btn_submit"
        android:textSize="25sp" />

</RelativeLayout>