<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_vibrateview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bground_splash" >

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <RelativeLayout
        android:id="@+id/layout_massaer_search"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/videoView"
        android:layout_marginTop="10dp"
         >

        <ImageView
            android:id="@+id/img_bluetooth"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/defaultDescription"
            android:gravity="center"
            android:src="@drawable/icon_bluetooth_disabled" />

        <TextView
            android:id="@+id/txt_bluetooth_name"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/img_bluetooth"
            android:gravity="center_vertical"
            android:text="@string/txt_bluetooth_name_no"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_bluetooth_search_hint"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/txt_bluetooth_name"
            android:layout_toRightOf="@+id/img_bluetooth"
            android:gravity="center_vertical"
            android:text="@string/txt_bluetooth_search_hint"
            android:textSize="25sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>